WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301160
[Quirk] claude.ai: Can't reach bottom of sidebar to sign out
https://bugs.webkit.org/show_bug.cgi?id=301160
Summary
[Quirk] claude.ai: Can't reach bottom of sidebar to sign out
Tim Horton
Reported
2025-10-20 20:09:44 PDT
[Quirk] claude.ai: Can't reach bottom of sidebar to sign out
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2025-10-20 20:09:45 PDT
<
rdar://problem/162616694
>
Tim Horton
Comment 2
2025-10-20 20:15:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52707
EWS
Comment 3
2025-10-20 22:24:54 PDT
Committed
301854@main
(e8a9f1b6ffab): <
https://commits.webkit.org/301854@main
> Reviewed commits have been landed. Closing PR #52707 and removing active labels.
EWS
Comment 4
2025-10-21 01:13:17 PDT
Committed
301765.60@safari-7623-branch
(acc3448acca1): <
https://commits.webkit.org/301765.60@safari-7623-branch
> Reviewed commits have been landed. Closing PR #3819 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug