[Quirk] claude.ai: Can't reach bottom of sidebar to sign out https://bugs.webkit.org/show_bug.cgi?id=301160 rdar://162616694

Reviewed by Wenson Hsieh.

The Claude sidebar uses a fixed 100vh height, but as the page is not scrollable,
and thus the UI is not collapsable, really needs a 100dvh height. Otherwise, the
bottom of the sidebar is not reachable, which includes the sign out UI.

Quirk claude.ai fixed elements with aria-label=Sidebar and 100vh height to use 100dvh instead.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsClaudeSidebarViewportUnitQuirk const):
(WebCore::handleClaudeQuirks):
(WebCore::Quirks::determineRelevantQuirks):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):

Canonical link: https://commits.webkit.org/301854@main