Source/WebCore/page/Quirks.h
@@ -257,6 +257,8 @@ public:
     WEBCORE_EXPORT bool needsPointerTouchCompatibility(const Element&) const;
     bool shouldTreatAddingMouseOutEventListenerAsContentChange() const;
     WEBCORE_EXPORT bool shouldHideSoftTopScrollEdgeEffectDuringFocus(const Element&) const;
+
+    bool needsClaudeSidebarViewportUnitQuirk(Element&, const RenderStyle&) const;
 #endif
 
     bool needsMozillaFileTypeForDataTransfer() const;
