Source/WebCore/page/QuirksData.h
@@ -115,6 +115,7 @@ struct WEBCORE_EXPORT QuirksData {
     bool shouldSynthesizeTouchEventsAfterNonSyntheticClickQuirk : 1 { false };
     bool shouldTreatAddingMouseOutEventListenerAsContentChange : 1 { false };
     bool requirePageVisibilityToPlayAudioQuirk : 1 { false };
+    bool needsClaudeSidebarViewportUnitQuirk : 1 { false };
 #endif // PLATFORM(IOS_FAMILY)
 
 #if PLATFORM(IOS) || PLATFORM(VISION)
